// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init() when there are excluded dependencies should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "npm install",
  ],
  Array [
    "npm outdated --json --long --depth=0",
  ],
]
`;

exports[`init() when there are excluded dependencies should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [
          "updtr-test-module-1",
          "updtr-test-module-2",
        ],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "npm install",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [
          "updtr-test-module-1",
          "updtr-test-module-2",
        ],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "npm outdated --json --long --depth=0",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [
          "updtr-test-module-1",
          "updtr-test-module-2",
        ],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/end",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [
          "updtr-test-module-1",
          "updtr-test-module-2",
        ],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
      "updateTasks": Array [],
    },
  ],
]
`;

exports[`init() when there are no outdated dependencies should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "npm install",
  ],
  Array [
    "npm outdated --json --long --depth=0",
  ],
]
`;

exports[`init() when there are no outdated dependencies should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "npm install",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "npm outdated --json --long --depth=0",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/end",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
      "updateTasks": Array [],
    },
  ],
]
`;

exports[`init() when there are outdated dependencies using npm should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "npm install",
  ],
  Array [
    "npm outdated --json --long --depth=0",
  ],
]
`;

exports[`init() when there are outdated dependencies using npm should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "npm install",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "npm outdated --json --long --depth=0",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/end",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "npm",
        "registry": undefined,
        "updateTo": "latest",
      },
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
]
`;

exports[`init() when there are outdated dependencies using yarn should emit expected events and execute expected commands 1`] = `
Array [
  Array [
    "yarn",
  ],
  Array [
    "yarn outdated --json --flat",
  ],
]
`;

exports[`init() when there are outdated dependencies using yarn should emit expected events and execute expected commands 2`] = `
Array [
  Array [
    "init/start",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "yarn",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/install-missing",
    Object {
      "cmd": "yarn",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "yarn",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/collect",
    Object {
      "cmd": "yarn outdated --json --flat",
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "yarn",
        "registry": undefined,
        "updateTo": "latest",
      },
    },
  ],
  Array [
    "init/end",
    Object {
      "config": Object {
        "cwd": "/Users/jhnns/dev/peerigon/updtr/test",
        "exclude": Array [],
        "packageManager": "yarn",
        "registry": undefined,
        "updateTo": "latest",
      },
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "1.1.1",
          "type": "regular",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
]
`;
